# osac-ui

./: .gitignore  AGENTS.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.cursor/rules/: must-follow-coding-rules.md
.github/workflows/: publish-charts.yaml  test.yaml  typecheck.yaml
apps/app-frontend/: package.json  vite.config.ts
apps/app-frontend/src/: main.tsx
apps/app-frontend/src/api/: fulfillmentFetch.ts
apps/app-frontend/src/hooks/: oidc-login.tsx
apps/app-frontend/src/shell/: AdminCatalogRoutes.tsx  AppShell.tsx  ShellMasthead.tsx  ShellSidebar.tsx  shellLabels.ts  shellNav.test.ts  shellNav.ts  shellRoutes.test.ts  shellRoutes.ts
apps/app-frontend/vite/: mockAuthPlugin.ts
charts/ui/: values.yaml
docs/: api-query-arch.md
libs/i18n/locales/en/: translation.json
libs/types/src/: index.ts
libs/ui-components/: package.json
libs/ui-components/src/: StatusLabel.tsx  VmStatusLabel.tsx  icons.tsx
libs/ui-components/src/api/: api-context.tsx  fulfillment-decode.test.ts  fulfillment-decode.ts  types.test.ts  types.ts
libs/ui-components/src/components/: ExternalLink.tsx
libs/ui-components/src/utils/: error.ts  (+1 more)
mock/: .gitignore  README.md  auth.py  dict_utils.py  events.py  filter_parser.py  handlers.py  mock_server.py  openapi_loader.py  pyproject.toml  state_machines.py  store.py  users.yaml
mock/openapi/v3/: public.yaml
mock/scenarios/: default.yaml
proxy/: go.mod  go.sum  main.go
proxy/auth/: handler.go  userinfo.go
proxy/bridge/: connectjson.go
proxy/config/: config.go
scripts/: update-mock-openapi.mjs
(+199 files in other folders)
